# lunatech-lunabet

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  docker-compose.yml
.claude/agents/: mobile-ux.md
.github/: dependabot.yaml
.github/workflows/: ci.yml
migrations/: 20260525000001_init.sql  20260525000002_match_reminders.sql  20260525000003_stakes.sql  20260525000004_stakes_2_5_10.sql  20260525000005_tenants.sql  20260525000006_per_tenant_reminders.sql  20260525000007_rls.sql  20260525000008_pending_tenants.sql  20260529000001_platform_magic_links.sql  20260529000002_relax_rls.sql  20260529000003_restore_force_rls.sql  20260529000004_relax_rls_again.sql  20260609000001_user_lang.sql  20260613000001_daily_digests.sql  20260613000002_today_matches_emails.sql  20260613150000_add_bets_indexes.sql  20260614000001_user_streaks.sql  20260614000002_player_of_the_day.sql  20260614000003_bet_result_seen.sql  20260614000004_invite_mode.sql  20260614000005_leagues.sql  20260614000006_achievements.sql  20260614000007_achievement_notifications.sql  20260614000008_multipliers.sql  20260614000009_tenant_logos.sql  20260614000010_drop_leagues.sql  20260614000011_push_subscriptions.sql  20260614000012_rank_alerts.sql  20260614000013_live_score_push.sql  20260614000014_push_native.sql
mobile/: .gitignore  README.md
mobile/src-tauri/: Cargo.toml  tauri.conf.json
mobile/src-tauri/capabilities/: default.json
mobile/src-tauri/icons/: README.md  icon.icns
mobile/src-tauri/src/: lib.rs  main.rs
scripts/: screenshot-emails.sh  screenshots.sh
specs/: 01-streaks.md  02-player-of-the-day.md  03-achievements-badges.md  04-private-leagues.md  05-confidence-multipliers.md  06-realtime-celebration.md  07-countdown-urgency.md  08-pwa-push.md  09-profile-rivalries.md  10-weekly-challenges.md  11-invite-based-orgs.md  12-mobile-tauri.md  13-live-score-push.md  README.md
src/: achievements.rs  characters.rs  config.rs  error.rs  fixtures.rs  football_data.rs  highlights.rs  i18n.rs  mail.rs  main.rs  matchday.rs  middleware.rs  models.rs  notifications.rs  push_channel.rs  rate_limit.rs  scoring.rs  stakes.rs  state.rs  storage.rs  streaks.rs  tenant.rs  webpush.rs
src/routes/: admin.rs  auth.rs  bets.rs  dev.rs  home.rs  import_bets.rs  invitations.rs  lang.rs  leaderboard.rs  leagues.rs  logo.rs  matches.rs  mod.rs  platform.rs  profile.rs  push.rs  pwa.rs  seo.rs  signup.rs  stake.rs  super_admin.rs  tenant_settings.rs  today.rs  well_known.rs
static/: ball.js  celebrate.js  countdown.js  easter-eggs.js  lucky.js  push.js  pwa.js  style.css  sw.js  timezone-converter.js
templates/: _bet_row.html  _match_card.html  _nav.html  admin_settings.html  admin_stakes.html  admin_tenant_form.html  admin_tenants.html  base.html  central_login.html  central_login_choose.html  dev.html  h2h.html  home.html  landing.html  leaderboard.html  league.html  leagues.html  login.html  login_sent.html  match_card.html  matches.html  members.html  platform_admin_dashboard.html  platform_admin_login.html  platform_admin_login_sent.html  profile.html  results.html  signup.html  signup_sent.html  stake.html  switch.html  tenant_not_found.html  today.html
templates/emails/: badge_unlock.html  daily_digest.html  invitation.html  magic_link.html  match_reminder.html  signup_verification.html  today_matches.html
