[package]
name = "lunatech-betting"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros", "multipart"] }
axum-extra = { version = "0.9", features = ["cookie", "cookie-private"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "fs"] }

sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "macros", "migrate"] }

askama = { version = "0.12", features = ["with-axum"] }
askama_axum = "0.4"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
uuid = { version = "1", features = ["v4", "serde"] }

lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

dotenvy = "0.15"
anyhow = "1"
thiserror = "2"

rand = "0.9"
# p256 / elliptic-curve still depend on rand_core 0.6, so the key-generation
# calls in webpush.rs need an OsRng from that line rather than rand 0.9's.
rand_core = { version = "0.6", features = ["getrandom"] }
base64 = "0.22"
sha2 = "0.11"
time = "0.3"
regex = "1"

# Web Push (pure Rust, no native deps so it stays on the rustls TLS stack).
# VAPID JWT signing + ECDH key agreement (P-256) and the aes128gcm content
# encryption (RFC 8291 / RFC 8188). HKDF/HMAC are implemented in-house in
# `webpush.rs` against `sha2` to avoid pulling a second `sha2` major.
p256 = { version = "0.13", features = ["ecdsa", "ecdh"] }
aes-gcm = "0.10"
